apps/web/src/index.css
@import "@mint/ui/styles";

@theme inline {
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
  --font-heading: var(--font-geist-pixel-circle);
}

@utility container {
  width: min(64rem, calc(100% - 1rem));
  margin-inline: auto;
}

@utility corner-square {
  @apply absolute size-2 rounded-xs border border-border bg-background;
  translate: var(--sq-x, -50%) var(--sq-y, -50%);
}

@utility bg-stripe {
  background-image: repeating-linear-gradient(
    -45deg,
    transparent,
    transparent 5px,
    rgba(255, 255, 255, 0.18) 5px,
    rgba(255, 255, 255, 0.18) 10px
  );
}

@utility bg-stripe-muted {
  background-image: repeating-linear-gradient(
    -45deg,
    transparent,
    transparent 5px,
    rgba(128, 128, 128, 0.1) 5px,
    rgba(128, 128, 128, 0.1) 10px
  );
}

@utility no-scrollbar {
  @apply [scrollbar-width:none] [&::-webkit-scrollbar]:hidden;
}

@layer base {
  :root {
    --header-height: 60px;
    --footer-height: 60px;
    --features-height: 150px;
    --hero-height: calc(
      100svh - 1rem - 2px - var(--header-height) - var(--footer-height) -
        var(--features-height)
    );
  }
  * {
    @apply border-border outline-ring/50;
  }
  body {
    @apply bg-background text-foreground antialiased overflow-hidden;
  }
  button:not(:disabled),
  [role="button"]:not(:disabled) {
    cursor: pointer;
  }
}

